--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Tarjeta de crédito válida</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
-    <script src="index.js" type="module"></script>
-  </body>
+    <title>VALIDAR TARJETA DE CREDITO</title>
+</head>
+
+<body id="inicio">
+    
+    <div id="agradecimiento">
+        
+         <h1> <strong>¡GRACIAS POR ELEGIR TU PRODUCTO!</strong> </h1>
+         <h2><strong> Por favor valida tu tarjeta para efectuar tu compra</strong></h2>
+
+            <a href="validartarjeta.html">  
+            <button id="button1" 
+              type= button onclick="Validar()"><strong>VALIDAR</strong></button>
+            </a>
+    </div>
+    <script type="text/javascript" src="app.js"></script>
+</body>
+
 </html>
