--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <title>VALIDAR TARJETA DE CREDITO</title>
+    <link rel="icon" type="image/png" href="../img/logocerveceria.png"/>
 </head>
 
 <body id="inicio">
+  <img src="../img/logocerveceria.png" id="logo1"/></img>
     
     <div id="agradecimiento">
-        
-         <h1> <strong>¡GRACIAS POR ELEGIR TU PRODUCTO!</strong> </h1>
+         <h1> <strong>¡GRACIAS POR ELEGIR NUESTRA CERVEZA!</strong> </h1>
          <h2><strong> Por favor valida tu tarjeta para efectuar tu compra</strong></h2>
 
             <a href="validartarjeta.html">  
@@ -19,7 +19,9 @@
               type= button onclick="Validar()"><strong>VALIDAR</strong></button>
             </a>
     </div>
-    <script type="text/javascript" src="app.js"></script>
+  
+    <script type="text/javascript" src="index.js"></script>
+
 </body>
 
 </html>
